# test-repo

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/mylib/: __init__.py  _mylib.py
tests/: test_ops.py
